--- a/app/src/main/res/layout/activity_map_main.xml
+++ b/app/src/main/res/layout/activity_map_main.xml
@@ -7,13 +7,31 @@
     android:layout_height="match_parent"
     tools:context="com.lpo.seoulnavi.MapMainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <RelativeLayout
+        android:id="@+id/boxMap"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <fragment
+            android:id="@+id/map"
+            android:layout_weight="1"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            class="com.google.android.gms.maps.MapFragment" />
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/btnFAB"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true"
+            android:layout_margin="16dp"
+            app:theme="@style/AppTheme"
+            app:fabSize="normal"
+            android:elevation="16dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@android:drawable/ic_dialog_map" />
+
+    </RelativeLayout>
+
 
 </android.support.constraint.ConstraintLayout>
