--- a/app/src/main/res/layout/filter_view.xml
+++ b/app/src/main/res/layout/filter_view.xml
@@ -26,7 +26,7 @@
                 android:text="1"/>
 
             <TextView
-                android:id="@+id/filter2"
+                android:id="@+id/filter_gym"
                 android:layout_width="70dp"
                 android:layout_height="70dp"
                 android:layout_centerHorizontal="true"
@@ -36,7 +36,7 @@
                 android:text="2"/>
 
             <TextView
-                android:id="@+id/filter3"
+                android:id="@+id/filter_korean_market"
                 android:layout_width="70dp"
                 android:layout_height="70dp"
                 android:layout_alignParentRight="true"
@@ -52,7 +52,7 @@
             android:layout_centerInParent="true">
 
             <TextView
-                android:id="@+id/filter4"
+                android:id="@+id/filter_no_smoking"
                 android:layout_width="70dp"
                 android:layout_height="70dp"
                 android:layout_alignParentLeft="true"
@@ -62,7 +62,7 @@
                 android:text="4"/>
 
             <TextView
-                android:id="@+id/filter5"
+                android:id="@+id/filter_wc"
                 android:layout_width="70dp"
                 android:layout_height="70dp"
                 android:layout_centerHorizontal="true"
@@ -72,7 +72,7 @@
                 android:text="5"/>
 
             <TextView
-                android:id="@+id/filter6"
+                android:id="@+id/filter_bicycle"
                 android:layout_width="70dp"
                 android:layout_height="70dp"
                 android:layout_alignParentRight="true"
@@ -88,7 +88,7 @@
             android:layout_alignParentBottom="true">
 
             <TextView
-                android:id="@+id/filter7"
+                android:id="@+id/filter_dust"
                 android:layout_width="70dp"
                 android:layout_height="70dp"
                 android:layout_alignParentLeft="true"
@@ -98,7 +98,7 @@
                 android:text="7"/>
 
             <TextView
-                android:id="@+id/filter8"
+                android:id="@+id/filter_library"
                 android:layout_width="70dp"
                 android:layout_height="70dp"
                 android:layout_centerHorizontal="true"
@@ -108,7 +108,7 @@
                 android:text="8"/>
 
             <TextView
-                android:id="@+id/filter9"
+                android:id="@+id/filter_back"
                 android:layout_width="70dp"
                 android:layout_height="70dp"
                 android:layout_alignParentRight="true"
